# lvar

./: .gitignore  CHANGELOG.md  README.md  flake.nix  lvar.cabal
.github/workflows/: ci.yaml
src/Data/: LVar.hs
test/Data/: LVarSpec.hs
