cabal-version:      2.4
name:               lvar
version:            0.2.0.0
license:            BSD-3-Clause
copyright:          2021 Sridhar Ratnakumar
maintainer:         srid@srid.ca
author:             Sridhar Ratnakumar
category:           Concurrency
synopsis:  TMVar that can be listened to
bug-reports: https://github.com/srid/lvar/issues
homepage: https://github.com/srid/lvar
description:
  LVar wraps a TMVar to allow multiple threads to listen to the underlying changes.

extra-source-files:
  CHANGELOG.md
  LICENSE
  README.md

library
  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    , base                   >=4.13.0.0 && <=5
    , stm  < 2.6
  ghc-options:
    -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns
  default-extensions:
    FlexibleContexts
    FlexibleInstances
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    OverloadedStrings
    ScopedTypeVariables
    TupleSections
    ViewPatterns

  exposed-modules:
    Data.LVar

  hs-source-dirs:     src
  default-language:   Haskell2010

test-suite lvar-test
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  other-modules:      Data.LVarSpec
  hs-source-dirs:     test
  default-language:   Haskell2010
  default-extensions:
    FlexibleContexts
    FlexibleInstances
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NumericUnderscores
    OverloadedStrings
    ScopedTypeVariables
    TupleSections
    ViewPatterns
  ghc-options:
    -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns
  build-depends:
    , async
    , base                   >=4.13.0.0 && <=5
    , hspec                  >=2.7
    , lvar
    , stm                    <2.6
